<resources>
    <string name="app_name">OdonScan</string>
    <string name="entry">ENTRAR</string>
    <string name="back">VOLVER</string>
    <string name="more">CONOCE MÁS...</string>
    <string name="animal_recognition">RECONOCIMIENTO ESPECIES</string>
    <string name="session">REGISTRO/INICIO SESION</string>
    <string name="warning">En desarrollo. No disponible en la versión actual.
    Disculpen las molestias</string>
    <string name="wrong">Lo sentimos, no hemos podido identificar la especie...</string>
    <string name="Considerations">Antes de fotografíar a la especie, tenga en cuenta los
        siguientes aspectos:</string>
    <string name="indicationA">-Intente que solo aparezca la especie a indentificar</string>
    <string name="indicationB">-Intente que la imagen abarque a todo el pez</string>
    <string name="indicationC">-Intente que solo haya un individuo</string>
    <string name="camera">ACCESO CAMARA</string>
    <string name="take_photo">TOMAR FOTO</string>
    <string name="selected_photo">Foto seleccionada</string>
    <string name="use">Usar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_access_camera">AccessCamera</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_wrong_id">WrongID</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_correct_id">CorrectID</string>
    <string name="vname">Nombre vernáculo:</string>
    <string name="description">Descripción:</string>
    <string name="distribution">Distribución geográfica:</string>
</resources>