<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InstructionsActivity">

    <ImageView
        android:id="@+id/cameraLogo"
        android:layout_width="221dp"
        android:layout_height="214dp"
        android:src="@drawable/logo_aes_camera"
        app:layout_constraintBottom_toTopOf="@id/Consideration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Consideration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Considerations"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/instructionsBlock"
        app:layout_constraintEnd_toEndOf="@+id/instructionsBlock"
        app:layout_constraintStart_toStartOf="@+id/instructionsBlock"
        app:layout_constraintTop_toBottomOf="@+id/cameraLogo"
        app:layout_constraintVertical_bias="0.073" />

    <LinearLayout
        android:id="@+id/instructionsBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/buttonsBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Consideration">

        <TextView
            android:id="@+id/instructionsA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indicationA"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.273"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructionsB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/indicationB"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/instructionsC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/indicationC"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionsBlock">

        <Button
            android:id="@+id/access_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_ieo"
            android:text="@string/camera"/>

        <Button
            android:id="@+id/back_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_ieo"
            android:text="@string/back"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>