<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/speciesImageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            android:contentDescription="None"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/speciesCNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speciesImageView"
            android:text="Cientific Name: European Hake" />

        <LinearLayout
            android:id="@+id/speciesVBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speciesCNameTextView">

            <TextView
                android:id="@+id/speciesVLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="start"
                android:text="@string/vname" />

            <TextView
                android:id="@+id/speciesVNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="16sp"
                android:text="Merluza Europea" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/speciesDescriptionBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speciesVBlock">

            <TextView
                android:id="@+id/speciesDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="start"
                android:text="@string/description" />

            <TextView
                android:id="@+id/speciesDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:gravity="center"
                android:textStyle="italic"
                android:text="A large predatory fish found in deep waters." />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/speciesGeoDistBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speciesDescriptionBlock">

            <TextView
                android:id="@+id/speciesGeoDistLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="start"
                android:textColor="@color/black"
                android:text="@string/distribution" />

            <TextView
                android:id="@+id/speciesGeoDistTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="italic"
                android:text="Geographical Distribution: North Atlantic, Mediterranean Sea" />
        </LinearLayout>

        <TextView
            android:id="@+id/speciesFaoCodeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/speciesGeoDistBlock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="FAO Code: HKE" />

        <TextView
            android:id="@+id/speciesSizeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/speciesFaoCodeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Medium Size: 50cm" />

        <TextView
            android:id="@+id/speciesSimilarTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/speciesSizeTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Similar Species: Merluccius capensis, Merluccius paradoxus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
